# Semestr6

./: .gitignore
JPP/1/ex1/c_loops/: CMakeLists.txt  math_c_loops.c  math_c_loops.h
JPP/1/ex1/c_recursion/: Doxyfile.in  math_c_recursion.c  math_c_recursion.h
JPP/1/ex1/c_tester/: main.c
JPP/1/ex1_C_loop/: CMakeLists.txt  lib.c
JPP/1/ex1_c_loops/: Doxyfile.in  math_c_loops.c  math_c_loops.h
JPP/1/ex1_c_recursion/: CMakeLists.txt  math_c_recursion.c  math_c_recursion.h
JPP/1/ex1_c_tester/: CMakeLists.txt  main.c
JPP/1/ex2/ada_loops/: ada_loops.adb  ada_loops.ads  make.sh
JPP/1/ex2/ada_recursion/: ada_recursion.adb  ada_recursion.ads  make.sh
JPP/1/ex2/ada_tester/: make.sh  tester.adb
JPP/1/ex3/rust_loops/: Cargo.toml
JPP/1/ex3/rust_loops/src/: lib.rs
JPP/1/ex3/rust_recursion/: Cargo.toml
JPP/1/ex3/rust_recursion/src/: lib.rs
JPP/1/ex3/rust_tester/: Cargo.toml
JPP/1/ex3/rust_tester/src/: main.rs
JPP/1/ex3/rust_tester2/: build.rs
JPP/1/ex4/: make.sh
JPP/1/ex5/: make.sh  tester.adb
JPP/1/ex6/: build.rs
JPP/1/ex6/src/: main.rs
JPP/1/ex7/: main.c  make.sh
SW/car/: Wheels.cpp  Wheels.h  car.ino
SW/doc/: main.tex  main.toc
WZA/: 1.ipynb  2.ipynb
WZA/Labs/: 2.ipynb  6.ipynb  7.ipynb  8.ipynb
